--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,6 +87,7 @@ triggered = "^0.1.2"
 eva-sdk = "^0.3.45"
 busrt = "^0.4"
 chrono = "^0.4.33"
+simple-pool = "^0.0.17"
 
 [profile.release]
 strip = true
