--- a/svc/controller-modbus/Cargo.toml
+++ b/svc/controller-modbus/Cargo.toml
@@ -21,7 +21,7 @@ itertools = { workspace = true }
 lazy_static = { workspace = true }
 bmart = { workspace = true }
 rmodbus = { version = "0.6", features = [ "std" ] }
-simple-pool = "0.0.16"
+simple-pool = { workspace = true }
 ieee754 = "0.2.6"
 tokio-serial = "5.4.4"
 
