--- a/svc/db-influx/Cargo.toml
+++ b/svc/db-influx/Cargo.toml
@@ -18,7 +18,7 @@ once_cell = { workspace = true }
 hyper = { version = "0.14.18", features = ["client", "http1", "http2", "tcp", "stream"] }
 hyper-tls = "0.5"
 base64 = "0.13"
-simple-pool = "0.0.16"
+simple-pool = { workspace = true }
 serde_json = { workspace = true }
 urlencoding = "2.1.3"
 csv-async = "1.2.6"
