--- a/share/svc-tpl/svc-tpl-replication.yml
+++ b/share/svc-tpl/svc-tpl-replication.yml
@@ -53,8 +53,7 @@ config:
   # subscribed OIDs
   oids:
     - "#"
-  oids_exclude:
-    - "sensor:tests/temp"
+  oids_exclude: []
   # DANGEROUS, enable for multi-level clusters only
   #replicate_remote: true
 user: nobody
