--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ members = [
   "dobj-codegen",
   "psrpc",
   "genpass-native",
+  "mkmf",
   "crypto-tools",
   "benchmarks/bm-primary"
 , "crypto-tools", "dobj-codegen"]
@@ -64,7 +65,7 @@ parking_lot = "^0.12.1"
 async-channel = "^1.7"
 async-recursion = "^1.0.5"
 serde_yaml = "^0.8"
-eva-common = "^0.3.52"
+eva-common = "^0.3.54"
 cargo_metadata = "^0.18.1"
 itertools = "^0.12.1"
 hex = "^0.4.3"
