--- a/eva/Cargo.toml
+++ b/eva/Cargo.toml
@@ -58,6 +58,7 @@ openssl = { workspace = true }
 sysinfo = "0.29"
 num_cpus = "1.16.0"
 binrw = "0.13.3"
+mkmf = { path = "../mkmf" }
 
 [features]
 std-alloc = []
