--- a/contrib/controller-tuya/svc-tpl-controller-tuya.yml
+++ b/contrib/controller-tuya/svc-tpl-controller-tuya.yml
@@ -16,8 +16,14 @@ config:
   pull_interval: 2
   # DPS - EVA ICS OID map
   map:
-    '16': 'unit:t1/switch'
-    '103': 'sensor:t1/temp'
+    '16':
+      oid: 'unit:t1/switch'
+    '101':
+      oid: 'sensor:t1/voltage'
+      # divide by 10
+      factor: 10
+    '103':
+      oid: 'sensor:t1/temp'
   # Action map
   action_map:
     'unit:t1/switch':
